# hermes_telemetry

./: .gitignore  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
config/: observability.json
docs/: USAGE.md
hermes_otel/: __init__.py  attributes.py  config.py  metrics.py  state.py  tracer.py
hermes_otel/exporters/: jsonl_file_exporter.py
hermes_otel/hooks/: __init__.py  llm.py  session.py  tool.py
